[tool.poetry]
name = "mlml"
version = "0.1.0"
description = "Multi label learning with missing labels algorithm"
authors = ["Jose Perez-Parras Toledano <joseperezparras95@gmail.com>"]

[tool.poetry.dependencies]
scikit-learn = "^0.20.2"
scipy = "^1.2"
numpy = "^1.16"
pytest = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
